Initial commit of bootstrap and an updated index.html to include the new formatting.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-<html><body><h1>Devon Jedamski's Website!</h1>
-<p>This is the default web page for this server.</p>
-<p>The web server software is running but no content has been added.</p>
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>D. Jedamski's Website</title>
+
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+    </head>
+    <body><h1>Devon Jedamski's Website!</h1>
+        <p>This is the default web page for this server.</p>
+        <p>The web server software is running but no content has been added.</p>
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+    </body>
+</html>
