Added a header to the index page

--- a/index.html
+++ b/index.html
@@ -19,11 +19,26 @@
 
     </head>
     <body>
+        <!-- Page Header -->
+        <!-- Set your background image for this header on the line below. -->
+        <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                        <div class="site-heading">
+                            <h1>Devon Jedamski</h1>
+                            <hr class="small">
+                            <span class="subheading">This is a Website</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        
         <!-- Main Content -->
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h1>Devon Jedamski's Website!</h1>
                     <p>This is the default web page for this server.</p>
                     <p>The web server software is running but no content has been added.</p>
                 </div>
