Added navigation, updated links on the footer. Added an about me page.

--- a/about-me.html
+++ b/about-me.html
@@ -47,14 +47,14 @@
         </nav>
         
         <!-- Page Header -->
-        <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
+        <header class="intro-header" style="background-image: url('img/about-bg.jpg')">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                         <div class="site-heading">
-                            <h1>Devon Jedamski</h1>
+                            <h1>About Me</h1>
                             <hr class="small">
-                            <span class="subheading">This is a Website</span>
+                            <span class="subheading">Engineer, Developer, Designer</span>
                         </div>
                     </div>
                 </div>
@@ -65,8 +65,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p>This is the default web page for this server.</p>
-                    <p>The web server software is running but no content has been added.</p>
+                    <p>Devon Jedamski is an engineer, developer, and maker. He is a conceptual design engineer at Northrop Grumman in Los Angeles, California. Devon has experience in air breathing propulsion, software development, smart grid design, and renewable energy.</p>
+                    
+                    <p>Fusce ac sollicitudin turpis. Duis et consequat ipsum. Maecenas hendrerit molestie enim, sed consequat urna laoreet a. Nam sit amet nulla cursus velit luctus varius tristique sed lacus. Vivamus turpis ipsum, ultrices et rhoncus in, facilisis at lectus. Mauris pellentesque orci ut faucibus maximus.</p>
+
+                    <p>Devon received his B.S. in Mechanical Engineering and Aeronautical Engineering from Clarkson University and his S.M. in Aeronautics and Astronautics from the Massachusetts Institute of Technology (MIT).</p>
                 </div>
             </div>
         </div>
